Add Voice Assistant Webhook

--- a/cloud/dashboard.html
+++ b/cloud/dashboard.html
@@ -50,11 +50,11 @@
 
         <!-- ESP32 Setup Info -->
         <div
-            style="background:var(--bg-card);border:1px solid var(--border);border-radius:16px;padding:20px;margin-top:10px;">
-            <h3 style="margin-bottom:12px;font-size:1em;color:var(--text-secondary);">📡 ESP32 Setup</h3>
-            <p style="color:var(--text-muted);font-size:0.85em;line-height:1.6;">
+            style="background:var(--bg-secondary);border:1px solid var(--glass-border);border-radius:20px;padding:24px;margin-top:24px;">
+            <h3 style="margin-bottom:8px;font-size:1.1em;color:var(--text-primary);">📡 ESP32 Setup</h3>
+            <p style="color:var(--text-muted);font-size:0.9em;line-height:1.6;">
                 Your ESP32 must be connected to WiFi and configured with Device ID: <strong id="setupDeviceId"
-                    style="color:var(--accent-blue);"></strong><br>
+                    style="color:var(--accent-primary);"></strong><br>
                 Update <code
                     style="background:rgba(255,255,255,0.06);padding:2px 6px;border-radius:4px;">config.h</code> and
                 <code
@@ -62,6 +62,22 @@
                 on your ESP32.
             </p>
         </div>
+    </div>
+
+    <!-- Mobile Bottom Nav -->
+    <div class="mobile-nav">
+        <a href="#" class="nav-item active">
+            <span class="nav-icon">🏠</span>
+            <span>Home</span>
+        </a>
+        <a href="#" class="nav-item">
+            <span class="nav-icon">📊</span>
+            <span>Stats</span>
+        </a>
+        <a href="#" class="nav-item" onclick="logout()">
+            <span class="nav-icon">🔓</span>
+            <span>Logout</span>
+        </a>
     </div>
 
     <!-- Config & Logic -->
@@ -154,12 +170,12 @@
             const txt = document.getElementById('statusText');
             if (online) {
                 dot.className = 'status-dot online';
-                txt.textContent = 'ESP32 Online (WS)'; // "WS Connected" really, backend is online
-                txt.style.color = 'var(--accent-green)';
+                txt.textContent = 'ESP32 Online';
+                txt.style.color = 'var(--accent-success)';
             } else {
                 dot.className = 'status-dot offline';
-                txt.textContent = 'Disconnecting...';
-                txt.style.color = 'var(--accent-red)';
+                txt.textContent = 'Connecting...';
+                txt.style.color = 'var(--text-muted)';
             }
         }
 
@@ -185,19 +201,15 @@
                 const icon = switchIcons[idx] || '💡';
 
                 html += `
-                <div class="switch-card" onclick="toggleRelay('${device.id}', '${key}', ${isOn})">
-                    <div class="switch-info">
-                        <span class="switch-icon">${icon}</span>
-                        <div>
-                            <div class="switch-name">${name}</div>
-                            <div class="switch-status">${isOn ? '🟢 ON' : '⚫ OFF'}</div>
-                        </div>
+                <div class="switch-card ${isOn ? 'active' : ''}" onclick="toggleRelay('${device.id}', '${key}', ${isOn})">
+                    <div class="switch-toggle"></div>
+                    <div class="switch-icon-wrapper">
+                        ${icon}
                     </div>
-                    <label class="toggle" onclick="event.stopPropagation()">
-                        <input type="checkbox" ${isOn ? 'checked' : ''} 
-                               onchange="toggleRelay('${device.id}', '${key}', ${isOn})">
-                        <span class="toggle-slider"></span>
-                    </label>
+                    <div class="switch-content">
+                        <div class="switch-name">${name}</div>
+                        <div class="switch-state">${isOn ? 'ON' : 'OFF'}</div>
+                    </div>
                 </div>`;
             });
 
@@ -212,25 +224,15 @@
                 renderDevice(currentDevice);
             }
 
-            // Send to Backend via REST (could use WS too, but REST ensures persistence confirm)
-            // Or use WS for speed: ws.send(JSON.stringify({type: 'command', data: {[key]: {state: newState}}}))
-
             // Let's use REST API
             try {
                 const update = {};
                 update[key] = { state: newState };
 
-                // Assuming we want to keep names if they exist, but backend merge handles it.
-                // Just send state change.
-
                 await fetch(`${API_URL}/devices/${deviceId}/state`, {
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json',
-                        // 'Authorization': `Bearer ${token}` // Endpoint currently unprotected or needs auth? 
-                        // Implementation plan said "current_user" commented out. 
-                        // But wait, "Phase 1" code had current_user commented out. 
-                        // To be safe, let's include header, if backend ignores it, fine.
                         'Authorization': `Bearer ${token}`
                     },
                     body: JSON.stringify(update)
