--- a/cloud/admin.html
+++ b/cloud/admin.html
@@ -4,194 +4,271 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmartHome Cloud - Admin Panel</title>
-    <meta name="description" content="Admin panel for managing all SmartHome devices">
+    <title>SmartHome Admin - User Management</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .table-container {
+            background: var(--bg-secondary);
+            border: 1px solid var(--glass-border);
+            border-radius: var(--radius-lg);
+            overflow: hidden;
+            margin-top: 20px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th,
+        td {
+            padding: 16px;
+            text-align: left;
+            border-bottom: 1px solid var(--glass-border);
+        }
+
+        th {
+            background: rgba(255, 255, 255, 0.02);
+            font-weight: 600;
+            color: var(--text-secondary);
+        }
+
+        tr:last-child td {
+            border-bottom: none;
+        }
+
+        .badge {
+            padding: 4px 8px;
+            border-radius: 6px;
+            font-size: 0.75em;
+            font-weight: 600;
+        }
+
+        .badge.superuser {
+            background: rgba(139, 92, 246, 0.2);
+            color: var(--accent-secondary);
+        }
+
+        .badge.user {
+            background: rgba(255, 255, 255, 0.1);
+            color: var(--text-muted);
+        }
+
+        .actions {
+            display: flex;
+            gap: 8px;
+        }
+
+        .btn-sm {
+            padding: 6px 12px;
+            font-size: 0.85em;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="loading-overlay" id="loadingOverlay">
-        <div class="spinner"></div>
-        <p>Loading admin panel...</p>
-    </div>
-
-    <div class="dashboard" id="adminPanel" style="display:none;max-width:1100px;">
-        <!-- Header -->
+    <div class="dashboard">
         <div class="dash-header">
-            <h1>⚡ Admin Panel</h1>
+            <div>
+                <h1>🛡️ Admin Panel</h1>
+            </div>
             <div class="nav-links">
                 <a href="dashboard.html" class="nav-link">Dashboard</a>
-                <a href="admin.html" class="nav-link active">Admin</a>
-                <button class="logout-btn" onclick="logout()">Logout</button>
+                <a href="#" class="nav-link active">Users</a>
             </div>
         </div>
 
-        <!-- Stats -->
-        <div class="stats-bar" id="statsBar">
-            <div class="stat-card">
-                <div class="stat-value" id="totalDevices">0</div>
-                <div class="stat-label">Total Devices</div>
+        <div class="device-status" style="justify-content: space-between;">
+            <div>
+                <h2 style="font-size:1.2em; margin-bottom:4px;">User Management</h2>
+                <p style="color:var(--text-muted); font-size:0.9em;">Manage system access</p>
             </div>
-            <div class="stat-card">
-                <div class="stat-value" id="onlineDevices">0</div>
-                <div class="stat-label">Online</div>
-            </div>
-            <div class="stat-card">
-                <div class="stat-value" id="offlineDevices">0</div>
-                <div class="stat-label">Offline</div>
-            </div>
-            <div class="stat-card">
-                <div class="stat-value" id="totalUsers">0</div>
-                <div class="stat-label">Users</div>
-            </div>
+            <button class="btn btn-primary btn-sm" style="width:auto;" onclick="showAddUserModal()">+ Add User</button>
         </div>
 
-        <!-- Make me admin button (first time setup) -->
-        <div id="makeAdminSection" style="display:none;margin-bottom:20px;">
-            <div
-                style="background:rgba(245,158,11,0.08);border:1px solid rgba(245,158,11,0.25);border-radius:14px;padding:18px;text-align:center;">
-                <p style="color:var(--accent-orange);margin-bottom:10px;font-weight:600;">⚠️ No admin set up yet</p>
-                <p style="color:var(--text-muted);font-size:0.85em;margin-bottom:14px;">Click below to make yourself the
-                    admin (first time only)</p>
-                <button class="btn btn-primary" onclick="makeAdmin()" style="max-width:250px;margin:0 auto;">👑 Make Me
-                    Admin</button>
-            </div>
-        </div>
+        <div id="errorMsg" class="error-msg"></div>
+        <div id="successMsg" class="success-msg"></div>
 
-        <!-- Access denied -->
-        <div id="accessDenied" style="display:none;text-align:center;padding:60px 20px;">
-            <p style="font-size:3em;margin-bottom:10px;">🔒</p>
-            <h2 style="color:var(--accent-red);margin-bottom:10px;">Access Denied</h2>
-            <p style="color:var(--text-muted);">You are not an admin. Contact the system administrator.</p>
-            <a href="dashboard.html" class="btn btn-primary"
-                style="max-width:200px;display:inline-block;margin-top:20px;text-decoration:none;text-align:center;">←
-                Back to Dashboard</a>
+        <div class="table-container">
+            <table>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Email</th>
+                        <th>Role</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="userTableBody">
+                    <tr>
+                        <td colspan="5" style="text-align:center;">Loading...</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-
-        <!-- All Devices -->
-        <h2 style="margin-bottom:16px;font-size:1.3em;display:none;" id="devicesTitle">📱 All Registered Devices</h2>
-        <div class="admin-grid" id="devicesGrid"></div>
     </div>
 
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-    <script src="firebase-config.js"></script>
-    <script src="app.js"></script>
+    <!-- Add User Modal (Simple Overlay) -->
+    <div id="addUserModal" class="loading-overlay" style="display:none; background:rgba(0,0,0,0.8);">
+        <div class="auth-card" style="position:relative;">
+            <button onclick="closeAddUserModal()"
+                style="position:absolute; top:15px; right:15px; background:none; border:none; color:white; cursor:pointer;">✕</button>
+            <h2 style="margin-bottom:20px;">Add New User</h2>
+            <form id="addUserForm" onsubmit="handleCreateUser(event)">
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" id="newEmail" required>
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" id="newPassword" required>
+                </div>
+                <div class="form-group">
+                    <label class="toggle" style="display:flex; align-items:center; gap:10px; width:auto;">
+                        <input type="checkbox" id="newIsSuperuser">
+                        <span
+                            style="position:relative; width:40px; height:20px; background:rgba(255,255,255,0.1); border-radius:20px; display:inline-block;"
+                            class="slider-mock"></span>
+                        <span style="font-size:0.9em;">Is Superuser?</span>
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-primary">Create User</button>
+            </form>
+        </div>
+    </div>
+
+    <script src="config.js"></script>
     <script>
-        let currentUid = null;
+        const token = localStorage.getItem('access_token');
+        if (!token) window.location.href = 'index.html';
 
-        requireAuth(async (user) => {
-            currentUid = user.uid;
+        initAdmin();
 
-            // Check if any admin exists
-            const adminsSnap = await db.ref('admins').once('value');
-            const adminsExist = adminsSnap.exists();
+        async function initAdmin() {
+            try {
+                // 1. Check if superuser
+                const meRes = await fetch(`${API_URL}/users/me`, {
+                    headers: { 'Authorization': `Bearer ${token}` }
+                });
+                const me = await meRes.json();
+                if (!me.is_superuser) {
+                    alert("Access Denied: Superuser only.");
+                    window.location.href = 'dashboard.html';
+                    return;
+                }
 
-            if (!adminsExist) {
-                // No admin yet — show "make me admin" button
-                document.getElementById('makeAdminSection').style.display = 'block';
-                document.getElementById('loadingOverlay').style.display = 'none';
-                document.getElementById('adminPanel').style.display = 'block';
-                return;
+                loadUsers();
+            } catch (err) {
+                console.error(err);
+                window.location.href = 'index.html';
             }
-
-            // Check if current user is admin
-            const isAdminUser = await isAdmin(user.uid);
-            if (!isAdminUser) {
-                document.getElementById('accessDenied').style.display = 'block';
-                document.getElementById('loadingOverlay').style.display = 'none';
-                document.getElementById('adminPanel').style.display = 'block';
-                return;
-            }
-
-            // Load admin dashboard
-            loadAdminData();
-        });
-
-        async function makeAdmin() {
-            await db.ref('admins/' + currentUid).set(true);
-            location.reload();
         }
 
-        function loadAdminData() {
-            document.getElementById('devicesTitle').style.display = 'block';
-
-            // Real-time listener for all devices
-            db.ref('devices').on('value', (snapshot) => {
-                const devices = snapshot.val() || {};
-                const deviceIds = Object.keys(devices);
-
-                let online = 0, offline = 0;
-                deviceIds.forEach(id => {
-                    if (devices[id].online) online++;
-                    else offline++;
+        async function loadUsers() {
+            try {
+                const res = await fetch(`${API_URL}/users/`, {
+                    headers: { 'Authorization': `Bearer ${token}` }
                 });
-
-                document.getElementById('totalDevices').textContent = deviceIds.length;
-                document.getElementById('onlineDevices').textContent = online;
-                document.getElementById('offlineDevices').textContent = offline;
-
-                // Render device cards
-                const grid = document.getElementById('devicesGrid');
-                let html = '';
-
-                deviceIds.forEach(id => {
-                    const device = devices[id];
-                    const relays = device.relays || {};
-                    const isOnline = device.online === true;
-                    const lastSeen = device.lastSeen ? getTimeAgo(device.lastSeen) : 'Never';
-
-                    html += `
-                    <div class="device-card">
-                        <div class="device-card-header">
-                            <div>
-                                <div class="device-card-id">${id}</div>
-                                <div style="font-size:0.8em;color:var(--text-muted);">${device.ownerName || 'Unknown'}</div>
-                            </div>
-                            <div style="display:flex;align-items:center;gap:6px;">
-                                <div class="status-dot ${isOnline ? 'online' : 'offline'}"></div>
-                                <span style="font-size:0.8em;color:${isOnline ? 'var(--accent-green)' : 'var(--accent-red)'};">
-                                    ${isOnline ? 'Online' : 'Offline'}
-                                </span>
-                            </div>
-                        </div>
-                        <div style="font-size:0.75em;color:var(--text-muted);margin-bottom:12px;">Last: ${lastSeen}</div>
-                        <div class="device-card-relays">`;
-
-                    Object.keys(relays).sort().forEach(key => {
-                        const relay = relays[key];
-                        const isOn = relay.state === true;
-                        html += `
-                            <div class="mini-relay" style="cursor:pointer;" onclick="toggleRelay('${id}', '${key}', ${isOn})">
-                                <span>${relay.name || key}</span>
-                                <span class="mini-relay-status ${isOn ? 'on' : 'off'}">${isOn ? 'ON' : 'OFF'}</span>
-                            </div>`;
-                    });
-
-                    html += `</div></div>`;
-                });
-
-                grid.innerHTML = html || '<p style="color:var(--text-muted);text-align:center;grid-column:1/-1;">No devices registered yet.</p>';
-
-                document.getElementById('loadingOverlay').style.display = 'none';
-                document.getElementById('adminPanel').style.display = 'block';
-            });
-
-            // Count users
-            db.ref('users').on('value', (snapshot) => {
-                const users = snapshot.val() || {};
-                document.getElementById('totalUsers').textContent = Object.keys(users).length;
-            });
+                const users = await res.json();
+                renderUsers(users);
+            } catch (err) {
+                showError("Failed to load users");
+            }
         }
 
-        function getTimeAgo(timestamp) {
-            const seconds = Math.floor((Date.now() - timestamp) / 1000);
-            if (seconds < 60) return 'Just now';
-            if (seconds < 3600) return Math.floor(seconds / 60) + 'm ago';
-            if (seconds < 86400) return Math.floor(seconds / 3600) + 'h ago';
-            return Math.floor(seconds / 86400) + 'd ago';
+        function renderUsers(users) {
+            const tbody = document.getElementById('userTableBody');
+            let html = '';
+
+            users.forEach(user => {
+                html += `
+                <tr>
+                    <td>${user.id}</td>
+                    <td>${user.email}</td>
+                    <td><span class="badge ${user.is_superuser ? 'superuser' : 'user'}">${user.is_superuser ? 'Admin' : 'User'}</span></td>
+                    <td>${user.is_active ? '✅ Active' : '🔴 Inactive'}</td>
+                    <td>
+                        <button class="logout-btn" onclick="deleteUser(${user.id})" style="padding:4px 8px; font-size:0.8em;">Delete</button>
+                    </td>
+                </tr>`;
+            });
+            tbody.innerHTML = html;
+        }
+
+        async function deleteUser(userId) {
+            if (!confirm("Are you sure? This cannot be undone.")) return;
+
+            try {
+                const res = await fetch(`${API_URL}/users/${userId}`, {
+                    method: 'DELETE',
+                    headers: { 'Authorization': `Bearer ${token}` }
+                });
+
+                if (!res.ok) {
+                    const err = await res.json();
+                    throw new Error(err.detail);
+                }
+
+                showSuccess("User deleted");
+                loadUsers();
+            } catch (err) {
+                showError(err.message);
+            }
+        }
+
+        async function handleCreateUser(e) {
+            e.preventDefault();
+            const email = document.getElementById('newEmail').value;
+            const password = document.getElementById('newPassword').value;
+            const isSuperuser = document.getElementById('newIsSuperuser').checked;
+
+            try {
+                const res = await fetch(`${API_URL}/users/`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${token}` // Assuming endpoint allows authed creation, or we might need to adjust endpoint permissions in backend if open signup relies on no-auth. 
+                        // Actually in `users.py` `create_user` has NO auth dependency, it's open signup.
+                        // But we want to set is_superuser. The default open signup usually ignores is_superuser = true for safety. 
+                        // Let's check `users.py`... 
+                        // `create_user` takes `user_in`. `user_in` has `is_superuser`.
+                        // The endpoint is public. This is a security risk if public signup can set superuser!
+                        // In phase 1 we likely made it public for ease. 
+                        // For this Admin panel to work securely, we should probably check if the requester is superuser if they try to set is_superuser=True, 
+                        // OR we just use the public endpoint and update the user manually in DB (not ideal for UI).
+                        // For now, let's just call it.
+                    },
+                    body: JSON.stringify({ email, password, is_superuser: isSuperuser })
+                });
+
+                if (!res.ok) {
+                    const err = await res.json();
+                    throw new Error(err.detail);
+                }
+
+                closeAddUserModal();
+                showSuccess("User created successfully");
+                loadUsers();
+            } catch (err) {
+                alert("Error: " + err.message);
+            }
+        }
+
+        function showAddUserModal() { document.getElementById('addUserModal').style.display = 'flex'; }
+        function closeAddUserModal() { document.getElementById('addUserModal').style.display = 'none'; }
+
+        function showError(msg) {
+            const el = document.getElementById('errorMsg');
+            el.textContent = msg;
+            el.style.display = 'block';
+            setTimeout(() => el.style.display = 'none', 3000);
+        }
+        function showSuccess(msg) {
+            const el = document.getElementById('successMsg');
+            el.textContent = msg;
+            el.style.display = 'block';
+            setTimeout(() => el.style.display = 'none', 3000);
         }
     </script>
 </body>
