--- a/cloud/index.html
+++ b/cloud/index.html
@@ -7,9 +7,19 @@
     <title>SmartHome Cloud - Login</title>
     <meta name="description" content="Control your ESP32 Smart Home from anywhere in the world">
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 
 <body>
+
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('sw.js')
+                .then(() => console.log('Service Worker Registered'));
+        }
+    </script>
     <!-- Loading overlay -->
     <div class="loading-overlay" id="loadingOverlay">
         <div class="spinner"></div>
@@ -20,12 +30,14 @@
         <div class="auth-card">
             <div class="auth-logo">
                 <span class="icon">🏠</span>
-                <h1>SmartHome Cloud</h1>
-                <p>Control your home from anywhere</p>
+                <h1>SmartHome</h1>
+                <p style="color:var(--text-secondary); margin-top:8px;">Welcome back</p>
             </div>
 
-            <div id="errorMsg" class="error-msg"></div>
-            <div id="successMsg" class="success-msg"></div>
+            <div id="errorMsg" class="error-msg" style="color:var(--accent-danger); margin-bottom:15px; display:none;">
+            </div>
+            <div id="successMsg" class="success-msg"
+                style="color:var(--accent-success); margin-bottom:15px; display:none;"></div>
 
             <!-- Tabs -->
             <div class="auth-tabs">
@@ -36,47 +48,47 @@
             <!-- Login Form -->
             <form id="loginForm" class="auth-form active" onsubmit="handleLogin(event)">
                 <div class="form-group">
-                    <label>Email</label>
-                    <input type="email" id="loginEmail" placeholder="your@email.com" required autocomplete="username">
+                    <label>Email Address</label>
+                    <input type="email" id="loginEmail" placeholder="name@example.com" required autocomplete="username">
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" id="loginPassword" placeholder="Enter your password" required
+                    <input type="password" id="loginPassword" placeholder="••••••••" required
                         autocomplete="current-password">
                 </div>
-                <button type="submit" class="btn btn-primary" id="loginBtn">🔑 Login to Dashboard</button>
+                <button type="submit" class="btn btn-primary" id="loginBtn">Sign In</button>
             </form>
 
             <!-- Register Form -->
             <form id="registerForm" class="auth-form" onsubmit="handleRegister(event)">
                 <div class="form-group">
-                    <label>Email</label>
-                    <input type="email" id="regEmail" placeholder="your@email.com" required>
+                    <label>Email Address</label>
+                    <input type="email" id="regEmail" placeholder="name@example.com" required>
                 </div>
                 <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" id="regPassword" placeholder="Min 6 characters" required minlength="6">
+                    <label>Create Password</label>
+                    <input type="password" id="regPassword" placeholder="Min 6 chars" required minlength="6">
                 </div>
 
-                <hr style="margin: 20px 0; border: 0; border-top: 1px solid var(--border);">
-                <p style="color: var(--text-muted); margin-bottom: 15px; font-size: 0.9em;">Device Setup</p>
+                <div style="height:1px; background:var(--glass-border); margin:20px 0;"></div>
+                <h4 style="margin-bottom:15px; color:var(--text-primary);">Device Setup</h4>
 
                 <div class="form-group">
                     <label>Device ID</label>
-                    <input type="text" id="regDeviceId" placeholder="e.g. SH-001 (Must match ESP32)" required>
+                    <input type="text" id="regDeviceId" placeholder="e.g. SH-001" required>
                 </div>
                 <div class="form-group">
-                    <label>Device Name</label>
-                    <input type="text" id="regDeviceName" placeholder="e.g. My Home" required>
+                    <label>Home Name</label>
+                    <input type="text" id="regDeviceName" placeholder="e.g. My Apartment" required>
                 </div>
-                <button type="submit" class="btn btn-primary" id="registerBtn">📱 Register & Create Account</button>
+                <button type="submit" class="btn btn-primary" id="registerBtn">Create Account</button>
             </form>
         </div>
     </div>
 
     <!-- Config & Logic -->
     <script src="config.js"></script>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
     <script>
         // Check if already logged in
         const token = localStorage.getItem('access_token');
