--- a/cloud/index.html
+++ b/cloud/index.html
@@ -10,94 +10,42 @@
     <link rel="manifest" href="manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!-- Chart.js for Analytics -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
 
     <script>
+        // Immediate check to prevent flash
+        const token = localStorage.getItem('access_token');
+        if (token) {
+            window.location.href = 'dashboard.html';
+        }
+    </script>
+    <style>
+        /* Hide body until we confirm not logged in */
+        body {
+            visibility: hidden;
+            opacity: 0;
+            transition: opacity 0.5s ease;
+        }
+    </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            if (!localStorage.getItem('access_token')) {
+                document.body.style.visibility = "visible";
+                document.body.style.opacity = "1";
+            }
+        });
+
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('sw.js')
                 .then(() => console.log('Service Worker Registered'));
         }
     </script>
-    <!-- Loading overlay -->
-    <div class="loading-overlay" id="loadingOverlay">
-        <div class="spinner"></div>
-        <p>Loading SmartHome Cloud...</p>
-    </div>
 
-    <div class="auth-container">
-        <div class="auth-card">
-            <div class="auth-logo">
-                <span class="icon">🏠</span>
-                <h1>SmartHome</h1>
-                <p style="color:var(--text-secondary); margin-top:8px;">Welcome back</p>
-            </div>
-
-            <div id="errorMsg" class="error-msg" style="color:var(--accent-danger); margin-bottom:15px; display:none;">
-            </div>
-            <div id="successMsg" class="success-msg"
-                style="color:var(--accent-success); margin-bottom:15px; display:none;"></div>
-
-            <!-- Tabs -->
-            <div class="auth-tabs">
-                <button class="auth-tab active" onclick="switchTab('login')">Login</button>
-                <button class="auth-tab" onclick="switchTab('register')">Register</button>
-            </div>
-
-            <!-- Login Form -->
-            <form id="loginForm" class="auth-form active" onsubmit="handleLogin(event)">
-                <div class="form-group">
-                    <label>Email Address</label>
-                    <input type="email" id="loginEmail" placeholder="name@example.com" required autocomplete="username">
-                </div>
-                <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" id="loginPassword" placeholder="••••••••" required
-                        autocomplete="current-password">
-                </div>
-                <button type="submit" class="btn btn-primary" id="loginBtn">Sign In</button>
-            </form>
-
-            <!-- Register Form -->
-            <form id="registerForm" class="auth-form" onsubmit="handleRegister(event)">
-                <div class="form-group">
-                    <label>Email Address</label>
-                    <input type="email" id="regEmail" placeholder="name@example.com" required>
-                </div>
-                <div class="form-group">
-                    <label>Create Password</label>
-                    <input type="password" id="regPassword" placeholder="Min 6 chars" required minlength="6">
-                </div>
-
-                <div style="height:1px; background:var(--glass-border); margin:20px 0;"></div>
-                <h4 style="margin-bottom:15px; color:var(--text-primary);">Device Setup</h4>
-
-                <div class="form-group">
-                    <label>Device ID</label>
-                    <input type="text" id="regDeviceId" placeholder="e.g. SH-001" required>
-                </div>
-                <div class="form-group">
-                    <label>Home Name</label>
-                    <input type="text" id="regDeviceName" placeholder="e.g. My Apartment" required>
-                </div>
-                <button type="submit" class="btn btn-primary" id="registerBtn">Create Account</button>
-            </form>
-        </div>
-    </div>
-
-    <!-- Config & Logic -->
-    <script src="config.js"></script>
-    <!-- <script src="app.js"></script> -->
     <script>
-        // Check if already logged in
-        const token = localStorage.getItem('access_token');
-        if (token) {
-            window.location.href = 'dashboard.html';
-        } else {
-            document.getElementById('loadingOverlay').style.display = 'none';
-        }
-
         function switchTab(tab) {
             document.querySelectorAll('.auth-tab').forEach(t => t.classList.remove('active'));
             document.querySelectorAll('.auth-form').forEach(f => f.classList.remove('active'));
